# skope

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/analytics/: data.rs  mod.rs  reports.rs  requests.rs  server.rs
src/cli/: commands.rs  mod.rs
src/database/: handler.rs  mod.rs
src/runner/: cli.rs
src/system/: manager.rs  memory.rs
src/ui/: app.rs  chart.rs  mod.rs
