[package]
name = "skope"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite = "0.37.0"
sysinfo = "0.35.2"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
